# less_6

./: .env.sample  .gitignore  .pylintrc  README.md  data.json  groups.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_in_stock_alter_product_created_at_and_more.py  0003_alter_product_in_stock.py  0004_version.py  0005_product_owner.py  0006_alter_product_options.py
catalog/templates/: base.html  contacts.html
catalog/templates/catalog/: category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/include/: footer.html  header.html
config/: settings.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_phone_user_country.py  0003_user_phone.py  0004_user_token.py
users/templates/: login.html
users/templates/users/: password_reset.html  user_form.html
