[tool.poetry]
name = "les_6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
ipython = "^8.27.0"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"
redis = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
